--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ databases:
   - name: authenticate-me
     user: authenticate-me
     plan: free
-    region: ohio
+    region: oregan
 
 services:
   - type: web
