--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,4 +23,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/components/StoreLocater/config.js
+# /src/components/StoreLocater/config.js
